--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ transition: all 0.1s ease-in;
 }
 .navbar .navbar-collapse {
     text-align: center;
-    background-color: #e5e5e5;
+    background-color: #f5f5f5;
 }
 .navbar-toggle{
  float: left !important;
