--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ transition: all 0.1s ease-in;
 }
 .navbar .navbar-collapse {
     text-align: center;
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
 }
 .navbar-toggle{
  float: left !important;
@@ -255,7 +255,7 @@ hr {
   font-weight: bold;
   font-style: italic;
   color: #fff;
-  font-size: 4em;
+  font-size: 4rem;
   font-family: URW Chancery L, cursive;
 }
 .row-centered {
@@ -263,6 +263,7 @@ hr {
   margin-left: 9vw;
   margin-right: 15vw;
 }
+
 /*featured collection*/
 .hoverEffect {
   width: 90%;
@@ -423,13 +424,15 @@ hr {
 }
 /*------------------login modal*/
 #loginModal {
-  width: 30%;
+  /*width: 30%;*/
   height: 60%;
-  margin: auto;
-  padding-left: 2em;
-  padding-right: 2em;
-  padding-top: 1em;
-  padding-bottom: 2em;
+  margin: auto !important;
+  /*margin-left: 1rem;
+  margin-right: 1rem;*/
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
   border-radius: 5px;
   overflow: hidden;
   background-color: rgba(255, 255, 255, .8);
