--- a/css/payment.css
+++ b/css/payment.css
@@ -1,3 +1,6 @@
+body{
+	font-size: 1.5rem !important;
+}
 .payment{
 	padding: 1rem;
 }
@@ -24,7 +27,7 @@
 
 }
 @media (max-width: 767px) {
-	
+body{font-size: 1rem !important;}
 }
 thead>tr>th {
 	font-weight: bold;
@@ -34,10 +37,10 @@ th {
 	font-weight: normal;
 }
 
-#payment-checkout-btn {
-	/*float: right;*/
+/*#payment-checkout-btn {
+	float: right;
 }
-
+#payment-back-btn{float: left;}*/
 .cost-overview {
 	list-style: none;
 }
