--- a/css/signUp.css
+++ b/css/signUp.css
@@ -5,28 +5,20 @@
 
 .sign-up-Wrapper{
   padding-left: 0;
-
-  /*width: 50%;
-
-  margin: auto;
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  border-radius: 5px;
-  overflow:hidden;*/
+  margin:10px;
   background-color:rgba(255,255,255,.8);
-
 }
 
 .signUp-title{
-  font-size: 2em;
-  /*padding-top: 100px;
-  font-size: 2.5vw;
+  font-size: 1.8em;
   text-align: center;
-  width: 100%;*/
-  /*margin: auto;*/
+  vertical-align: middle;
 }
+
 .form-control-feedback{
   text-align:justify !important;
+}
+
+.hint{
+  text-align: center;
 }
